# pybind11_readthedocs_io

./: .pre-commit-config.yaml  README.md
First-steps/: CMakeLists.txt  First-steps.md  mymodule.cpp
First-steps/operator/: CMakeLists.txt  add.cpp  add.h  div.cpp  div.h  mul.cpp  mul.h  sub.cpp  sub.h
Functions/: CMakeLists.txt  Functions.md  mymodule.cpp
Functions/data/: CMakeLists.txt  animals.cpp  animals.h  myclass.cpp  myclass.h
Object-oriented-code/: CMakeLists.txt  Object-oriented-code.md  mymodule.cpp
Object-oriented-code/custom_type/: CMakeLists.txt  my_class.cpp  my_class.h  my_struct.cpp  my_struct.h
